--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -15,9 +15,13 @@ jobs:
       uses: actions/setup-python@v4
       with:
         python-version: '3.8'
+    - name: Install build tools
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y build-essential
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        pip install -r requirements.txt --only-binary=all
     - name: Test import
       run: python -c "import sys; sys.path.insert(0, '.'); import index; print('Import successful')"
