--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -22,6 +22,6 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt --only-binary=all
+        pip install --verbose -r requirements.txt
     - name: Test import
       run: python -c "import sys; sys.path.insert(0, '.'); import index; print('Import successful')"
