--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ google-api-core==1.14.2
 google-auth==1.6.3
 google-cloud-language==1.3.0
 googleapis-common-protos==1.6.0
-grpcio==1.23.0
+grpcio>=1.50.0
 idna==2.8
 itsdangerous==1.1.0
 Jinja2==2.10.1
